@@ -48,6 +48,17 @@ do								\
       fprintf ((FILE), "\n");					\
 } while (0)
 
+/* Output at beginning of assembler file.  */
+/* The .file command should always begin the output.  */
+#undef ASM_FILE_START
+#define ASM_FILE_START(FILE)						\
+  do {									\
+	output_file_directive (FILE, main_input_filename);		\
+	if (target_flags & MASK_INTEL_SYNTAX)				\
+	  fputs ("\t.intel_syntax\n", FILE);				\
+	fprintf (FILE, "\t.version\t\"01.01\"\n");			\
+  } while (0)
+
 /* Do use .optim by default on this machine.  */
 #undef ASM_FILE_START_1
 #define ASM_FILE_START_1(FILE) fprintf (FILE, "\t.optim\n")
